fixed transition flicker

--- a/main.css
+++ b/main.css
@@ -97,11 +97,11 @@ a {
 #content-container {
     margin-top: 105px;
     position: absolute;
-    top: 47%;
+    top: 0%;
     left: 50%;
-    transform: translateX(-50%);
-    width: 460px;
+    transform: translate(-50%);
     transition-duration: 1s;
+    width: 460px;
     scrollbar-gutter: stable;
 }
 
@@ -114,7 +114,7 @@ a {
     opacity: 0;
     padding-bottom: 200px;
     margin-top: 0;
-    scroll-margin: 105px;
+    scroll-margin: 460px;
     transition-duration: 1s;
 }
 
